[gd_scene load_steps=43 format=2]

[ext_resource path="res://Art/todo_icon.png" type="Texture" id=1]
[ext_resource path="res://Outdoor Art/Outdoors_Map.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UserInterface.gd" type="Script" id=3]
[ext_resource path="res://Info Icons/map icon normal.png" type="Texture" id=4]
[ext_resource path="res://Info Icons/wasd.png" type="Texture" id=5]
[ext_resource path="res://Info Icons/arrowkeys.png" type="Texture" id=6]
[ext_resource path="res://Scripts/ToggleInventoryButton.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Slot.gd" type="Script" id=9]
[ext_resource path="res://GameGirl.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/SmallPopUpBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/ToggleQuestButton.gd" type="Script" id=12]
[ext_resource path="res://Scripts/ToggleMapButton.gd" type="Script" id=13]
[ext_resource path="res://map_label_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://House Art/fridge_box.png" type="Texture" id=19]
[ext_resource path="res://House Art/dresserslotfull.png" type="Texture" id=20]
[ext_resource path="res://House Art/fridgeFull.png" type="Texture" id=21]
[ext_resource path="res://House Art/fridgeEmpty.png" type="Texture" id=22]
[ext_resource path="res://House Art/dresserslotempty.png" type="Texture" id=23]
[ext_resource path="res://House Art/dresser_box.png" type="Texture" id=24]
[ext_resource path="res://Art/lightLeaf.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=28]
[ext_resource path="res://Scenes/Quest.tscn" type="PackedScene" id=29]
[ext_resource path="res://Scenes/BouncingArrow.tscn" type="PackedScene" id=30]
[ext_resource path="res://Scenes/PopUpNotification.tscn" type="PackedScene" id=31]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=32]
[ext_resource path="res://House Art/fridge_close.png" type="Texture" id=34]
[ext_resource path="res://House Art/dresser1.png" type="Texture" id=35]
[ext_resource path="res://House Art/side_table1.png" type="Texture" id=36]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=38]

[sub_resource type="Animation" id=103]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2050, 122 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=104]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=102]
resource_name = "slide_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.46229, 0.233258 ),
"update": 0,
"values": [ Vector2( 2050, 162 ), Vector2( 1134, 162 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=106]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 176, 62 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=107]
resource_name = "swoosh_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.133972 ),
"update": 0,
"values": [ Vector2( 329.333, 9.33334 ), Vector2( 176, 62 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.176777 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.143587 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxTexture" id=99]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 113, 106 )

[sub_resource type="StyleBoxTexture" id=100]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 92, 91 )

[sub_resource type="StyleBoxTexture" id=101]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 92, 91 )

[sub_resource type="Animation" id=108]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 358, 115 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 528, -4.66667 ) ]
}

[sub_resource type="Animation" id=109]
resource_name = "slide"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -9.333, -11.333 ), Vector2( 520.667, -11.3333 ) ]
}

[sub_resource type="Animation" id=110]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=111]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HUD" type="CanvasLayer"]
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )
script = ExtResource( 32 )

[node name="PopUpNotification" parent="." instance=ExtResource( 31 )]
position = Vector2( 2050, 122 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PopUpNotification"]
anims/RESET = SubResource( 103 )
anims/fade_out = SubResource( 104 )
anims/slide_in = SubResource( 102 )

[node name="PopUpTimer" type="Timer" parent="PopUpNotification"]
wait_time = 5.0
one_shot = true

[node name="ToggleQuestButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1230.0
margin_top = -296.0
margin_right = 1297.0
margin_bottom = -228.0
rect_scale = Vector2( 2.3, 2.3 )
texture_normal = ExtResource( 1 )
script = ExtResource( 12 )

[node name="BouncingArrow" parent="ToggleQuestButton" instance=ExtResource( 30 )]
visible = false
position = Vector2( -200.87, 16.5217 )

[node name="ToggleMapButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -507.0
margin_top = -296.0
margin_right = -440.0
margin_bottom = -228.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 4 )
script = ExtResource( 13 )

[node name="ToggleInventoryButton" type="TextureButton" parent="."]
margin_left = 1898.0
margin_top = 8.0
margin_right = 2037.0
margin_bottom = 147.0
texture_normal = ExtResource( 25 )
script = ExtResource( 7 )

[node name="UserInterface" type="CanvasLayer" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
script = ExtResource( 3 )

[node name="DarkBackground" type="ColorRect" parent="UserInterface"]
visible = false
modulate = Color( 1, 1, 1, 0.486275 )
margin_left = -6.0
margin_top = -8.0
margin_right = 346.0
margin_bottom = 207.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="SmallPopUpBox" parent="UserInterface" instance=ExtResource( 11 )]
visible = false

[node name="Inventory" parent="UserInterface" instance=ExtResource( 28 )]
visible = false
position = Vector2( 176, 62 )
scale = Vector2( 1, 1 )
inventory_type = "player"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface/Inventory"]
playback_speed = 2.0
anims/RESET = SubResource( 106 )
anims/swoosh_in = SubResource( 107 )

[node name="FridgeInventory" type="Node2D" parent="UserInterface"]
visible = false
position = Vector2( 38.3333, 87 )
script = ExtResource( 8 )
inventory_type = "fridge"

[node name="TextureRect" type="TextureRect" parent="UserInterface/FridgeInventory"]
margin_left = -1.0
margin_top = -15.6667
margin_right = 280.0
margin_bottom = 121.333
rect_scale = Vector2( 0.428, 0.316 )
texture = ExtResource( 19 )

[node name="Label" type="Label" parent="UserInterface/FridgeInventory"]
margin_left = 5.0
margin_top = -7.33333
margin_right = 277.0
margin_bottom = 12.6667
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fridge"
align = 1

[node name="GridContainer" type="GridContainer" parent="UserInterface/FridgeInventory"]
margin_left = 6.33333
margin_top = 0.333336
margin_right = 115.333
margin_bottom = 50.3333
columns = 5

[node name="Slot1" type="Panel" parent="UserInterface/FridgeInventory/GridContainer"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 99 )
script = ExtResource( 9 )
default_tex = ExtResource( 22 )
empty_tex = ExtResource( 21 )

[node name="Slot2" type="Panel" parent="UserInterface/FridgeInventory/GridContainer"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 99 )
script = ExtResource( 9 )
default_tex = ExtResource( 22 )
empty_tex = ExtResource( 21 )

[node name="Slot3" type="Panel" parent="UserInterface/FridgeInventory/GridContainer"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 99 )
script = ExtResource( 9 )
default_tex = ExtResource( 22 )
empty_tex = ExtResource( 21 )

[node name="Slot4" type="Panel" parent="UserInterface/FridgeInventory/GridContainer"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 99 )
script = ExtResource( 9 )
default_tex = ExtResource( 22 )
empty_tex = ExtResource( 21 )

[node name="Slot5" type="Panel" parent="UserInterface/FridgeInventory/GridContainer"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 99 )
script = ExtResource( 9 )
default_tex = ExtResource( 22 )
empty_tex = ExtResource( 21 )

[node name="FridgeIcon" type="TextureRect" parent="UserInterface/FridgeInventory"]
margin_left = -20.0004
margin_top = -35.0
margin_right = 364.0
margin_bottom = 477.0
rect_scale = Vector2( 0.09, 0.09 )
mouse_filter = 2
texture = ExtResource( 34 )

[node name="DresserInventory" type="Node2D" parent="UserInterface"]
visible = false
position = Vector2( 38.6667, 85.3333 )
script = ExtResource( 8 )
inventory_type = "dresser"

[node name="TextureRect" type="TextureRect" parent="UserInterface/DresserInventory"]
margin_top = -12.6667
margin_right = 279.0
margin_bottom = 116.333
rect_scale = Vector2( 0.428, 0.316 )
texture = ExtResource( 24 )

[node name="Label" type="Label" parent="UserInterface/DresserInventory"]
margin_left = 5.33334
margin_top = -6.33333
margin_right = 277.333
margin_bottom = 13.6667
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dresser"
align = 1

[node name="GridContainer" type="GridContainer" parent="UserInterface/DresserInventory"]
margin_left = 6.0
margin_top = 2.0
margin_right = 115.0
margin_bottom = 22.0
columns = 5

[node name="Slot1" type="Panel" parent="UserInterface/DresserInventory/GridContainer"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 100 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot2" type="Panel" parent="UserInterface/DresserInventory/GridContainer"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 100 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot3" type="Panel" parent="UserInterface/DresserInventory/GridContainer"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 100 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot4" type="Panel" parent="UserInterface/DresserInventory/GridContainer"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 100 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot5" type="Panel" parent="UserInterface/DresserInventory/GridContainer"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 100 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="DresserIcon" type="TextureRect" parent="UserInterface/DresserInventory"]
margin_left = -12.0004
margin_top = -52.3333
margin_right = 372.0
margin_bottom = 459.667
rect_scale = Vector2( 0.13, 0.13 )
mouse_filter = 2
texture = ExtResource( 35 )

[node name="SideTableInventory" type="Node2D" parent="UserInterface"]
visible = false
position = Vector2( 38.6667, 73.3333 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}
inventory_type = "table"

[node name="TextureRect" type="TextureRect" parent="UserInterface/SideTableInventory"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.428, 0.316 )
texture = ExtResource( 24 )

[node name="Label" type="Label" parent="UserInterface/SideTableInventory"]
margin_left = 47.3333
margin_top = 5.0
margin_right = 114.333
margin_bottom = 19.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Side Table"

[node name="GridContainer" type="GridContainer" parent="UserInterface/SideTableInventory"]
margin_left = 6.66668
margin_top = 13.6667
margin_right = 111.667
margin_bottom = 37.6667
columns = 5

[node name="Slot1" type="Panel" parent="UserInterface/SideTableInventory/GridContainer"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 101 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot2" type="Panel" parent="UserInterface/SideTableInventory/GridContainer"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 101 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot3" type="Panel" parent="UserInterface/SideTableInventory/GridContainer"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 101 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot4" type="Panel" parent="UserInterface/SideTableInventory/GridContainer"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 101 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="Slot5" type="Panel" parent="UserInterface/SideTableInventory/GridContainer"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 101 )
script = ExtResource( 9 )
default_tex = ExtResource( 20 )
empty_tex = ExtResource( 23 )

[node name="SideTableIcon" type="TextureRect" parent="UserInterface/SideTableInventory"]
margin_left = -21.333
margin_top = -47.0
margin_right = 278.667
margin_bottom = 403.0
rect_scale = Vector2( 0.2, 0.2 )
mouse_filter = 2
texture = ExtResource( 36 )
flip_h = true

[node name="Quest" parent="UserInterface" instance=ExtResource( 29 )]
visible = false
position = Vector2( 88.6667, 30.6667 )
scale = Vector2( 0.13, 0.13 )

[node name="OneSecTimer" type="Timer" parent="UserInterface/Quest"]

[node name="PauseMenu" parent="UserInterface" instance=ExtResource( 38 )]
visible = false
margin_right = -339.0
margin_bottom = -199.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="MapBorder" type="ColorRect" parent="UserInterface"]
visible = false
margin_left = 88.0
margin_top = 27.0
margin_right = 253.0
margin_bottom = 176.0
color = Color( 0.301961, 0.356863, 0.188235, 1 )

[node name="Map" type="TextureRect" parent="UserInterface"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.333
margin_top = -270.667
margin_right = 852.667
margin_bottom = 873.333
rect_scale = Vector2( 0.125, 0.126 )
texture = ExtResource( 2 )

[node name="JJLabel" type="Label" parent="UserInterface/Map"]
margin_left = 990.0
margin_top = 530.0
margin_right = 1283.0
margin_bottom = 655.0
custom_fonts/font = ExtResource( 14 )
text = "Jimothy
John's"
align = 1

[node name="OdieHouseLabel" type="Label" parent="UserInterface/Map"]
margin_left = 550.0
margin_top = 1050.0
margin_right = 896.0
margin_bottom = 1111.0
custom_fonts/font = ExtResource( 14 )
text = "Odie's House"

[node name="HomeLabel" type="Label" parent="UserInterface/Map"]
margin_left = 325.0
margin_top = 680.0
margin_right = 651.0
margin_bottom = 769.0
custom_fonts/font = ExtResource( 14 )
text = "Frog Dad's
House"
align = 1

[node name="LettuceGardenLabel" type="Label" parent="UserInterface/Map"]
margin_left = 850.0
margin_top = 760.0
margin_right = 1146.0
margin_bottom = 885.0
custom_fonts/font = ExtResource( 14 )
text = "Lettuce
Garden"
align = 1

[node name="ForestLabel" type="Label" parent="UserInterface/Map"]
margin_left = 600.0
margin_top = 340.0
margin_right = 779.0
margin_bottom = 401.0
custom_fonts/font = ExtResource( 14 )
text = "Forest"

[node name="LeafPosition" type="Position2D" parent="."]
position = Vector2( 1974, 84 )

[node name="Controls" type="Node2D" parent="."]
visible = false
position = Vector2( -1050, 410 )
scale = Vector2( 3, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Controls"]
anims/RESET = SubResource( 108 )
anims/slide = SubResource( 109 )

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
margin_left = 528.0
margin_top = -4.66667
margin_right = 886.0
margin_bottom = 110.333

[node name="TextureRect" type="TextureRect" parent="Controls/HBoxContainer"]
margin_right = 176.0
margin_bottom = 115.0
texture = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="Controls/HBoxContainer"]
margin_left = 180.0
margin_right = 358.0
margin_bottom = 115.0
texture = ExtResource( 5 )

[node name="GameGirl" parent="." instance=ExtResource( 10 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -26 )
scale = Vector2( 2, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameGirl"]
anims/RESET = SubResource( 110 )
anims/fade_in = SubResource( 111 )

[connection signal="timeout" from="PopUpNotification/PopUpTimer" to="." method="_on_PopUpTimer_timeout"]
[connection signal="mouse_entered" from="ToggleQuestButton" to="ToggleQuestButton" method="_on_ToggleQuestButton_mouse_entered"]
[connection signal="mouse_exited" from="ToggleQuestButton" to="ToggleQuestButton" method="_on_ToggleQuestButton_mouse_exited"]
[connection signal="pressed" from="ToggleQuestButton" to="UserInterface/Quest" method="_on_ToggleQuestButton_pressed"]
[connection signal="mouse_entered" from="ToggleMapButton" to="ToggleMapButton" method="_on_ToggleMapButton_mouse_entered"]
[connection signal="mouse_exited" from="ToggleMapButton" to="ToggleMapButton" method="_on_ToggleMapButton_mouse_exited"]
[connection signal="pressed" from="ToggleMapButton" to="UserInterface" method="_on_ToggleMapButton_pressed"]
[connection signal="mouse_entered" from="ToggleInventoryButton" to="ToggleInventoryButton" method="_on_ToggleInventoryButton_mouse_entered"]
[connection signal="mouse_exited" from="ToggleInventoryButton" to="ToggleInventoryButton" method="_on_ToggleInventoryButton_mouse_exited"]
[connection signal="pressed" from="ToggleInventoryButton" to="UserInterface" method="_on_ToggleInventoryButton_pressed"]
[connection signal="gui_input" from="UserInterface/DarkBackground" to="UserInterface" method="_on_DarkBackground_gui_input"]
[connection signal="mouse_entered" from="UserInterface/FridgeInventory/TextureRect" to="UserInterface" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/FridgeInventory/TextureRect" to="UserInterface" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/DresserInventory/TextureRect" to="UserInterface" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/DresserInventory/TextureRect" to="UserInterface" method="_on_TextureRect_mouse_exited"]
[connection signal="timeout" from="UserInterface/Quest/OneSecTimer" to="UserInterface/Quest" method="_on_OneSecTimer_timeout"]
